Ajoute une note sous l’évaluation

--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -265,6 +265,10 @@ h5 {
       line-height: 2.25rem;
       margin-bottom: 24px;
     }
+    .note {
+      font-style: italic;
+      margin: 40px 0 16px;
+    }
   }
 }
 
