--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -222,7 +222,7 @@ h5 {
       margin-bottom: 8px;
       position: relative;
 
-      @include a-partir-de(sm){
+      @include a-partir-de(sm) {
         font-size: 1.25rem;
         line-height: 1.75rem;
       }
@@ -282,6 +282,7 @@ h5 {
       box-sizing: border-box;
       text-align: center;
       margin: 32px 0 16px;
+      border-bottom: 4px solid #fed980;
 
       @include a-partir-de(lg) {
         flex: 0 0 384px;
@@ -444,7 +445,6 @@ h5 {
   padding: 48px var(--gouttiere);
   background: #fed980 url("/assets/images/motif-fond-opacite-30.png");
 
-
   .tuile {
     background: white;
     border-radius: 8px;
@@ -453,16 +453,19 @@ h5 {
     grid-template-columns: auto;
     grid-template-rows: auto;
     grid-template-areas:
-        "illustration"
-        "titre"
-        "contenu"
-        "bouton";
+      "illustration"
+      "titre"
+      "contenu"
+      "bouton";
+    border-bottom: 6px solid var(--noir);
+    box-shadow: 0 6px 18px 0 rgba(0, 0, 18, 0.16);
+
 
     @include a-partir-de(lg) {
       grid-template-columns: auto 384px;
       grid-template-areas:
         "titre illustration"
-      "contenu illustration"
+        "contenu illustration"
         "bouton illustration";
       gap: 24px;
     }
