Supprime la bordure sous la Marianne
… qui était là par erreur.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,14 @@
 <header id="haut-de-page">
-    <nav>
-        <div class="contenu-section">
-            <a href="/"><img src="/assets/images/marianne-dark.svg" class="marianne"/></a>
-            <button class="menu">
-                <img src="/assets/images/icone-menu.svg"/>
-            </button>
-        </div>
-    </nav>
+  <div class="contenu-section">
+    <a href="/">
+      <img
+        src="/assets/images/marianne-dark.svg"
+        class="marianne"
+        alt="Marianne"
+      />
+    </a>
+    <button class="menu">
+      <img src="/assets/images/icone-menu.svg" alt="Menu burger" />
+    </button>
+  </div>
 </header>
