Corrige l’affichage des cartes
...suite à la mise en forme de tous les liens du site car les cartes sont des liens

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -121,6 +121,8 @@ header {
   width: 286px;
   text-decoration: none;
   color: var(--noir);
+  align-items: stretch;
+  gap: 0;
 
   &:hover {
     figure img {
