[CORRECTION] Remplace les href="#" par href="#a"
… car la compilation Svelte est en erreur lorsqu'on utilise "#".

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,9 @@
 <footer>
-    <div class="contenu-section">
-        <a href="#">Plan du site</a>
-        <a href="#">Mentions légales</a>
-        <a href="#">Politique de confidentialité</a>
-        <a href="#">Conditions générales</a>
-        <a href="#">Statistiques d'utilisation</a>
-    </div>
+  <div class="contenu-section">
+    <a href="#a">Plan du site</a>
+    <a href="#a">Mentions légales</a>
+    <a href="#a">Politique de confidentialité</a>
+    <a href="#a">Conditions générales</a>
+    <a href="#a">Statistiques d'utilisation</a>
+  </div>
 </footer>
