--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,12 @@
         alt="Marianne"
       />
     </a>
-    <button class="menu">
+    <button class="ouverture-menu" id="menu-mobile-ouvrir">
       <img src="/assets/images/icone-menu.svg" alt="Menu burger" />
     </button>
+
+    <div class="menu-mobile invisible" id="menu-mobile">
+      <a class="fermer" id="menu-mobile-fermer">Fermer</a>
+    </div>
   </div>
 </header>
