Corrige le lien vers le test

--- a/_includes/encart-test-maturite.html
+++ b/_includes/encart-test-maturite.html
@@ -10,7 +10,7 @@
         Faites le test et découvrez nos parcours cyber adaptés au niveau de
         maturité de votre entité.
       </p>
-      <a href="/test" class="bouton primaire">Testez votre maturité cyber</a>
+      <a href="/test-maturite" class="bouton primaire">Testez votre maturité cyber</a>
     </div>
   </div>
 </section>
