--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -78,7 +78,6 @@ h5 {
     font-size: 1.375rem;
     font-weight: bold;
     line-height: 1.75rem;
-    margin-bottom: 24px;
   }
 
   .propositions {
@@ -86,6 +85,7 @@ h5 {
     display: flex;
     flex-direction: column;
     gap: 16px;
+    margin-top: 24px;
   }
 
   label {
@@ -126,6 +126,13 @@ h5 {
   }
 
   .informations-complementaires {
+    margin-top: 8px;
+
+    .note {
+      color: #666666;
+      margin-bottom: 24px;
+    }
+
     label {
       display: flex;
       flex-direction: column;
@@ -459,7 +466,6 @@ h5 {
       "bouton";
     border-bottom: 6px solid var(--noir);
     box-shadow: 0 6px 18px 0 rgba(0, 0, 18, 0.16);
-
 
     @include a-partir-de(lg) {
       grid-template-columns: auto 384px;
