--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,12 @@
 
     <div class="menu-mobile invisible" id="menu-mobile">
       <a class="fermer" id="menu-mobile-fermer">Fermer</a>
+
+      <div class="choix">
+        <a href="/">Accueil</a>
+        <a href="/catalogue/">Consulter le catalogue de services</a>
+        <a href="/test-maturite/">Tester votre maturité cyber</a>
+      </div>
     </div>
   </div>
 </header>
