Ajoute les choix des parcours au menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,12 @@
         <a href="/">Accueil</a>
         <a href="/catalogue/">Consulter le catalogue de services</a>
         <a href="/test-maturite/">Tester votre maturité cyber</a>
+        <details>
+          <summary>Progresser en cybersécurité</summary>
+
+          <a href="/parcours-debuter/">Cybersécurité : se lancer !</a>
+          <a href="/parcours-approfondir/">Cybersécurité : approfondir !</a>
+        </details>
       </div>
     </div>
   </div>
