--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -111,6 +111,19 @@ header {
         width: calc(100% - 32px);
         border-bottom: 1px solid #dddddd;
         padding: 12px 16px;
+
+        &.actif {
+          position: relative;
+          &:before {
+            content: "";
+            display: block;
+            width: 2px;
+            height: 24px;
+            left: 0;
+            background-color: #fed980;
+            position: absolute;
+          }
+        }
       }
 
       details {
