--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -165,6 +165,16 @@ h5 {
       }
     }
   }
+
+  .introduction{
+    p {
+      margin-bottom: 24px;
+    }
+
+    .bouton {
+      margin: 16px auto;
+    }
+  }
 }
 
 .resultats-test {
@@ -321,15 +331,11 @@ h5 {
       line-height: 2.25rem;
       margin-bottom: 24px;
     }
-
-    .note {
-      font-style: italic;
-      margin: 40px 0 16px;
-    }
   }
 }
 
 .radar-maturite {
+  margin-bottom: 16px;
   #radar {
     width: 100%;
     height: 100%;
@@ -514,4 +520,9 @@ h5 {
       }
     }
   }
+}
+
+.note {
+  font-style: italic;
+  margin: 24px 0 16px;
 }
