--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -173,6 +173,9 @@ h5 {
 
     .bouton {
       margin: 16px auto;
+      @include a-partir-de(sm) {
+        margin-left: 0;
+      }
     }
   }
 }
