--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         <a href="/" {% if page.url == '/' %} class="actif" {% endif %}>Accueil</a>
         <a href="/catalogue/" {% if page.url == '/catalogue/' %} class="actif" {% endif %}>Consulter le catalogue de services</a>
         <a href="/test-maturite/" {% if page.url == '/test-maturite/' %} class="actif" {% endif %}>Tester votre maturité cyber</a>
-        <details>
+        <details {% if page.url == '/parcours-debuter/' or page.url == '/parcours-approfondir/' %}open {% endif %}>
           <summary>Progresser en cybersécurité</summary>
 
           <a href="/parcours-debuter/" {% if page.url == '/parcours-debuter/' %} class="actif" {% endif %}>Cybersécurité : se lancer !</a>
