Masque le burger sur les plus grands écrans

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -67,6 +67,10 @@ header {
     justify-content: center;
     align-items: center;
 
+    @include a-partir-de(sm) {
+      display: none;
+    }
+
     img {
       width: 24px;
       height: 24px;
