[CORRECTION] N’affiche pas le lien externe sous les cartes

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -781,6 +781,10 @@ footer {
     height: 156px;
   }
 
+  &:after {
+    display: none;
+  }
+
   .contenu {
     flex: 1;
     box-sizing: border-box;
