Convertis la navigation mobile en `nav`
… qui semble plus sémantique.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
       <img src="/assets/images/icone-menu.svg" alt="Menu burger" />
     </button>
 
-    <div class="menu-mobile invisible" id="menu-mobile">
+    <nav class="menu-mobile invisible" id="menu-mobile">
       <a class="fermer" id="menu-mobile-fermer">Fermer</a>
       <div class="choix">
         <a href="/" {% if page.url == '/' %} class="actif" {% endif %}>Accueil</a>
@@ -31,6 +31,6 @@
           <a href="/parcours-approfondir/" {% if page.url == '/parcours-approfondir/' %} class="actif" {% endif %}>Cybersécurité : approfondir !</a>
         </details>
       </div>
-    </div>
+    </nav>
   </div>
 </header>
