Affiche le logo ANSSI et le titre dans l’entête

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,13 @@
         alt="Marianne"
       />
     </a>
+
+    <img class="logo-anssi" src="/assets/images/logo-anssi.svg" alt="Logo ANSSI"/>
+    <div class="titre-site">
+      <h1>MesServicesCyber <span class="beta">Bêta</span></h1>
+      <h2>Innovation ANSSI</h2>
+    </div>
+
     <button class="ouverture-menu" id="menu-mobile-ouvrir">
       <img src="/assets/images/icone-menu.svg" alt="Menu burger" />
     </button>
