Ajoute la navigation en affichage de bureau

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,3 +34,11 @@
     </nav>
   </div>
 </header>
+
+<section class="conteneur-nav">
+  <nav class="contenu-section">
+    <a href="/" {% if page.url == '/' %} class="actif" {% endif %}>Accueil</a>
+    <a href="/catalogue/" {% if page.url == '/catalogue/' %} class="actif" {% endif %}>Consulter le catalogue de services</a>
+    <a href="/test-maturite/" {% if page.url == '/test-maturite/' %} class="actif" {% endif %}>Tester votre maturité cyber</a>
+  </nav>
+</section>
