--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -217,6 +217,33 @@ header {
   }
 }
 
+.conteneur-nav {
+  padding: 0 var(--gouttiere);
+  display: none;
+
+  border-top: 1px solid #dddddd;
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 18, 0.16);
+
+  @include a-partir-de(lg) {
+    display: block;
+  }
+
+  .contenu-section {
+    display: flex;
+    gap: 32px;
+
+    a {
+      padding: 16px 0;
+      border-bottom: none;
+
+      &.actif {
+        font-weight: 500;
+        border-bottom: 2px solid #fed980;
+      }
+    }
+  }
+}
+
 .contenu-section {
   margin: 0 auto;
   width: 100%;
