Affiche le menu mobile pour les tablettes et les petits écrans également

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -112,8 +112,9 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-left: auto;
 
-    @include a-partir-de(sm) {
+    @include a-partir-de(lg) {
       display: none;
     }
 
