Supprime les bordures basses non désirées

--- a/assets/styles/service.scss
+++ b/assets/styles/service.scss
@@ -166,6 +166,7 @@
       }
 
       a {
+        border-bottom: none;
         text-decoration: none;
         color: var(--noir);
         padding-left: 8px;
