--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -173,7 +173,19 @@ h5 {
   }
 
   .introduction {
+    h4 {
+      font-size: 1.75rem;
+      line-height: 2.25rem;
+      margin-bottom: 24px;
+
+      @include a-partir-de(md) {
+        font-size: 2rem;
+        line-height: 2.5rem;
+      }
+    }
     p {
+      font-size: 1.125rem;
+      line-height: 1.75rem;
       margin-bottom: 24px;
     }
 
