Corrige le problème de rognage de la gauche de la première tuile
Le `:before` rajoute un élément qui permet au gap de s'appliquer *avant* les tuiles. Sans ça, la tuile de gauche est rognée… et on ne comprend pas pourquoi.
Le décalage `relative` vers la gauche remet les tuiles au bord de l'écran.

--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -406,6 +406,14 @@ h5 {
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
+  position: relative;
+  left:-20px;
+
+  &:before{
+    content: "";
+    display: block;
+    width: 1px;
+  }
 
   .tuile-niveau {
     scroll-snap-align: center;
