--- a/assets/styles/test-maturite.scss
+++ b/assets/styles/test-maturite.scss
@@ -409,9 +409,9 @@ h5 {
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
   position: relative;
-  left:-20px;
+  left: -20px;
 
-  &:before{
+  &:before {
     content: "";
     display: block;
     width: 1px;
@@ -432,6 +432,37 @@ h5 {
     font-weight: bold;
     gap: 8px;
     position: relative;
+    opacity: 0;
+    animation: apparition 0.8s;
+    animation-fill-mode: forwards;
+
+    &:nth-child(1) {
+      animation-delay: 0.5s;
+    }
+    &:nth-child(2) {
+      animation-delay: 1s;
+    }
+
+    &:nth-child(3) {
+      animation-delay: 1.4s;
+    }
+
+    &:nth-child(4) {
+      animation-delay: 1.8s;
+    }
+
+    &:nth-child(5) {
+      animation-delay: 2.2s;
+    }
+
+    @keyframes apparition {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 100;
+      }
+    }
 
     .plante {
       order: 3;
