--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -71,42 +71,48 @@ header {
     }
   }
 
-  .logo-anssi {
-    width: 68px;
-    height: 68px;
-    display: none;
-    @include a-partir-de(md) {
-      display: block;
-    }
-  }
+  .titre-msc {
+    display: flex;
+    align-items: center;
+    gap: 32px;
 
-  .titre-site {
-    display: none;
-    @include a-partir-de(md) {
-      display: block;
-    }
-
-    h1 {
-      margin: 0;
-      font-size: 1.25rem;
-      line-height: 1.75rem;
-
-      .beta {
-        text-transform: uppercase;
-        color: #18753c;
-        background: #b8fec9;
-        padding: 0 8px;
-        border-radius: 4px;
-        margin-left: 4px;
+    .logo-anssi {
+      width: 68px;
+      height: 68px;
+      display: none;
+      @include a-partir-de(md) {
+        display: block;
       }
     }
 
-    h2 {
-      margin: 0;
-      font-size: 0.875rem;
-      line-height: 1.5rem;
-      color: #3a3a3a;
-      font-weight: normal;
+    .titre-site {
+      display: none;
+      @include a-partir-de(md) {
+        display: block;
+      }
+
+      h1 {
+        margin: 0;
+        font-size: 1.25rem;
+        line-height: 1.75rem;
+
+        .beta {
+          text-transform: uppercase;
+          color: #18753c;
+          background: #b8fec9;
+          padding: 0 8px;
+          border-radius: 4px;
+          margin-left: 4px;
+        }
+      }
+
+      h2 {
+        margin: 0;
+        font-size: 0.875rem;
+        line-height: 1.5rem;
+        color: #3a3a3a;
+        font-weight: normal;
+      }
     }
   }
 
