Ajoute des couleurs jaunes

--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -5,6 +5,9 @@
 
 :root {
   --noir: #0d0c21;
+  --jaune-msc: #fed980;
+  --jaune-msc-hover: #ecca79;
+  --jaune-msc-clique: #ddbd70;
   --fonts: Marianne, Arial, sans-serif;
 }
 
