[SOIN] Remplace les codes couleur `jaune` par une variable

--- a/assets/styles/accueil.scss
+++ b/assets/styles/accueil.scss
@@ -286,7 +286,7 @@
 
         &.couleur1 {
           &:after {
-            background: #FED980;
+            background: var(--jaune-msc);
           }
         }
 
