--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -10,6 +10,8 @@
   --jaune-msc-clique: #ddbd70;
   --gris-desactive-fond: #e5e5e5;
   --gris-desactive-texte: #929292;
+  --gris-secondaire-fond-hover: rgba(0, 0, 0, 0.04);
+  --gris-secondaire-fond-clique: rgba(0, 0, 0, 0.08);
   --fonts: Marianne, Arial, sans-serif;
 }
 
