--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -12,6 +12,9 @@
   --gris-desactive-texte: #929292;
   --gris-secondaire-fond-hover: rgba(0, 0, 0, 0.04);
   --gris-secondaire-fond-clique: rgba(0, 0, 0, 0.08);
+  --controle-segmente-fond-hover: #f6f6f6;
+  --controle-segmente-fond-clique: #ededed;
+  --controle-segmente-courant-fond: #fff7db;
   --fonts: Marianne, Arial, sans-serif;
 }
 
