Ajoute des couleurs de survol et d’activation aux contrôles segmentés

--- a/assets/styles/catalogue.scss
+++ b/assets/styles/catalogue.scss
@@ -50,6 +50,14 @@
     cursor: pointer;
     background: white;
 
+    &:hover {
+      background: var(--controle-segmente-fond-hover);
+    }
+
+    &:active {
+      background: var(--controle-segmente-fond-clique);
+    }
+
     @include a-partir-de(md) {
       padding-top: 16px;
       padding-bottom: 16px;
