--- a/assets/styles/site.scss
+++ b/assets/styles/site.scss
@@ -15,6 +15,8 @@
   --controle-segmente-fond-hover: #f6f6f6;
   --controle-segmente-fond-clique: #ededed;
   --controle-segmente-courant-fond: #fff7db;
+  --menu-fond-hover: rgba(0, 0, 0, 0.04);
+  --menu-fond-clique: rgba(0, 0, 0, 0.08);
   --fonts: Marianne, Arial, sans-serif;
 }
 
@@ -242,11 +244,18 @@ header {
   .contenu-section {
     display: flex;
     align-items: center;
-    gap: 32px;
 
     a {
-      padding: 16px 0;
+      padding: 16px 16px;
       border-bottom: none;
+
+      &:hover {
+        background: var(--menu-fond-hover);
+      }
+
+      &:active {
+        background: var(--menu-fond-clique);
+      }
 
       &.actif {
         font-weight: 500;
@@ -257,7 +266,15 @@ header {
 
   details {
     position: relative;
-    padding: 16px 0;
+    padding: 16px 16px;
+
+    &:hover {
+      background: var(--menu-fond-hover);
+    }
+
+    &:active {
+      background: var(--menu-fond-clique);
+    }
 
     &.actif {
       font-weight: 500;
@@ -275,14 +292,13 @@ header {
       left: 0;
       right: 0;
       top: 62px;
-      padding: 0 16px;
       font-size: 0.875rem;
       line-height: 1.5rem;
       z-index: 5;
 
       a {
         width: 100%;
-        padding: 12px 0;
+        padding: 12px 16px;
         border-bottom: 1px solid #dddddd;
         position: relative;
         font-weight: normal;
@@ -298,7 +314,7 @@ header {
             height: 24px;
             background: var(--jaune-msc);
             position: absolute;
-            left: -8px;
+            left: 6px;
           }
         }
 
